# dailyreddit

./: .gitattributes  .gitignore  mypy.ini  pyproject.toml
dailyreddit/: app.ipynb
